fixed image alignment for on writing feature on home page

--- a/wp-content/themes/tmr/style.css
+++ b/wp-content/themes/tmr/style.css
@@ -1160,7 +1160,7 @@ display: none;
 div.hp-feature img {
 	float: left;
 
-	margin: 10px;
+	/*margin: 10px;*/
 	
 }
 
